--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,7 @@
 platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
-lib_deps = freenove/Freenove WS2812 Lib for ESP32@^1.0.5
+lib_deps = 
+	freenove/Freenove WS2812 Lib for ESP32@^1.0.5
+	bodmer/TFT_eSPI@^2.5.23
+	lvgl/lvgl@8.2.0
